# Numbering

./: .gitignore  1.신한캐피탈 제안요청서.docx  1.신한캐피탈 제안요청서v2.docx  NH_전담중개업무계약서.docx  README.md  eng_before.docx  main.py  pyproject.toml  without_table.docx  일반사모투자신탁1호(before).docx  임대차계약서v1.docx  하이일드8호(summary).docx
extract_numbering/: LICENSE  README.md  __init__.py  convert.py  main.py  numbering.py  setup.py
output_txt/: temp_00115760f85a4d97afafdc9b5c5c09cf.docx  temp_073c4ebd3dbe45758852730f8b8f792d.docx  temp_091fd4850703475c87fe403e5de9dcda.docx  temp_091fd4850703475c87fe403e5de9dcda_92e5e6a43b6f48b4bbd0ced153312ded.txt  temp_0d2f6199bb464cd1b693233ca61e98ff.docx  temp_0d2f6199bb464cd1b693233ca61e98ff_3829f2058f474f2ca178712f002ed476.txt  temp_17b1951b7ff64a768c4b01918c93ab90.docx  temp_33b2b7bc50d04654a3cac539d2258a8a.docx  temp_5efcbac9542a44d0b18b4c174026c46a.docx  temp_6a75706f0fe8434f87f00afdc2d132ad.docx  temp_6b3dbefd5a3e4e7faf1c8ef042a1cb94.docx  temp_752eeb65a8d94e3c87bd8af2b580ac78.docx  temp_7ee4f5915aa243529cd3c7f5ef88fe70.docx  temp_912fbc15453843b5b65683b85a6adc14.docx  temp_a13d90018bef47b39a960257bb18336a.docx  temp_a13d90018bef47b39a960257bb18336a_95310afae70645f09c6a8f6c61af562d.txt  temp_aa2c64d500e9469f9deefb20b210c924.docx  temp_ac6982e9649e4c888896c52731385113.docx  temp_aef425191a124af980082e1a717a619a.docx  temp_aef425191a124af980082e1a717a619a_7c76663035314e219d0f86e6fe3ddb22.txt  temp_ba6f7d2971584f88b62788223f14945c.docx  temp_c3c81fdd021148569478e083e9f83dd8.docx  temp_c3c81fdd021148569478e083e9f83dd8_752729f2ca29441793d7463b90e2b040.txt  (+8 more)
(+6 files in other folders)
